--- a/code/src/todo.txt
+++ b/code/src/todo.txt
@@ -132,6 +132,8 @@ Previously:
 
 	- [X] Attempted again at ECS initialisation (failed)									08/09
 
+	- [X] Implemented the basics of an ECS													09/09
+
 Next time:
 		
 	- [ ] Comment all functions and variables with at least something
