--- a/code/src/todo.txt
+++ b/code/src/todo.txt
@@ -135,6 +135,7 @@ Previously:
 	- [X] Implemented the basics of an ECS													09/09
 
 	- [X] Unique names for loading the same object name more than once						10/09
+	- [X] Began work on changing a model at runtime using ImGui								10/09
 
 Next time:
 		
